add jfr spring-libs and setup flyway, r2dbc, exception , log , context

--- a/homebudget-api/build.gradle
+++ b/homebudget-api/build.gradle
@@ -11,6 +11,8 @@ jar {
 
 dependencies {
     implementation project(":homebudget-domain")
+    implementation "br.com.jfr.libs:commons:${libsVersion}"
+    implementation "br.com.jfr.libs:commons-api:${libsVersion}"
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
