--- a/homebudget-domain/build.gradle
+++ b/homebudget-domain/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation "br.com.jfr.libs:commons:${libsVersion}"
+    implementation "br.com.jfr.libs:commons-r2dbc:${libsVersion}"
 }
