--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ subprojects {
     }
 
     group 'br.com.jfr.homebudget'
-    version '0.0.1-SNAPSHOT'
+    version '0.0.1'
 
     sourceCompatibility = '11'
     targetCompatibility = '11'
