setup Dockerfile and k8s manifests

--- a/homebudget-api/src/main/resources/applicationDefault.properties
+++ b/homebudget-api/src/main/resources/applicationDefault.properties
@@ -1,16 +1,17 @@
 # Properties for local development
 app.name=homebudget
+server.port=8081
 blockhound.enabled=false
-logging.level=debug
+logging.level.root=info
 
 # datasource
 datasource.driverClassName=org.postgresql.Driver
 datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-datasource.user=postgres
-datasource.password=password
-datasource.serverName=localhost
+datasource.user=${DB_USER:postgres}
+datasource.password=${DB_PWD:password}
+datasource.serverName=${DB_SERVER:localhost}
 datasource.databaseName=dbdev
-datasource.portNumber=5432
+datasource.portNumber=${DB_PORT:5432}
 datasource.minimumIdle=1
 datasource.maximumPoolSize=3
 datasource.idleTimeout=330000
@@ -18,8 +19,8 @@ datasource.maxLifetime=900000
 datasource.connectionTimeout=15000
 
 # flyway
-flyway.user=postgres
-flyway.password=password
+flyway.user=${DB_USER:postgres}
+flyway.password=${DB_PWD:password}
 flyway.enabled=true
 flyway.schemas=public
 flyway.enableBaselineOnMigration=true
