--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,16 @@ subprojects {
     repositories {
         mavenCentral()
         mavenLocal()
+        repositories {
+            maven {
+                name = "GitHubPackages"
+                url = "https://maven.pkg.github.com/jfrossetto/spring-libs"
+                credentials {
+                    username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                    password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
+                }
+            }
+        }
     }
 
     dependencies {
