--- a/.github/workflows/push-to-master.yaml
+++ b/.github/workflows/push-to-master.yaml
@@ -20,9 +20,26 @@ jobs:
         with:
           java-version: '11'
           distribution: 'corretto'
-      - name: Run Gradle Test
+      - name: Run Gradle Build
         uses: gradle/gradle-build-action@v2
         with:
           arguments: clean build
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
+
+  release:
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: jfrossetto/homebudget-api:latest
