--- a/.github/workflows/push-to-master.yaml
+++ b/.github/workflows/push-to-master.yaml
@@ -21,6 +21,9 @@ jobs:
           java-version: '11'
           distribution: 'corretto'
       - name: Run Gradle Build
+        run: |
+          pwd
+          ls -l
         uses: gradle/gradle-build-action@v2
         with:
           arguments: clean build
