--- a/.github/workflows/push-to-master.yaml
+++ b/.github/workflows/push-to-master.yaml
@@ -21,9 +21,6 @@ jobs:
           java-version: '11'
           distribution: 'corretto'
       - name: Run Gradle Build
-        run: |
-          pwd
-          ls -l
         uses: gradle/gradle-build-action@v2
         with:
           arguments: clean build
@@ -40,7 +37,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-
+      - name: loc
+        run: |
+          pwd
+          ls -l
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
