fix pipeline 4 - pwd

--- a/.github/workflows/push-to-master.yaml
+++ b/.github/workflows/push-to-master.yaml
@@ -38,6 +38,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: loc
+        with:
+          context: .
         run: |
           pwd
           ls -l
