--- a/.github/workflows/push-to-master.yaml
+++ b/.github/workflows/push-to-master.yaml
@@ -36,6 +36,8 @@ jobs:
         run: |
           pwd
           ls -l
+          ls -l ./homebudget-api/build/libs
+          ls -l ./homebudget-api/build/resources/main
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
