--- a/.github/workflows/push-to-master.yaml
+++ b/.github/workflows/push-to-master.yaml
@@ -27,6 +27,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
+  release:
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    steps:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
